assets/css/qacard.css
.qa-sideflex {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap-reverse;
    justify-content: center;

    width: 100%;

    margin: 1rem 0 0 0;
}

.qa-sideflex > .qa {
    flex: 4 1 0;
    min-width: 400px;
}

.qa-sideflex > .qa-sidebar {
    flex: 1 1 0;
    min-width: 300px;
    overflow: hidden;
}

.qa-sidebar ul {
    list-style-type: none;
    padding: 0;
}

.qa-sidebar .qa-theses {
    display: flex;
    flex-direction: column;
    gap: .2rem;
}

.qa-sidebar .qa-thesis, .qa-sidebar a.qa-thesis {
    width: 100%;
    margin: 0;
    margin-left: 1rem;

    font-weight: var(--bold-weight);
    text-align: left;

    overflow: hidden;
    white-space: wrap;
    text-overflow: ellipsis;
}

.qa-sidebar .qa-thesis.inactive {
    font-weight: var(--normal-weight);
    cursor: default;
}

.qa-sidebar .qa-thesis.inactive:hover {
    background-color: transparent;
}

.qa-grid {
    display: grid;
}

.qa-card-thesis.inactive {
    z-index: -1;
    transform: translateY(20%);
    opacity: 0;
    transition: opacity .2s ease-in-out, transform 1s ease-in-out;
}

.qa-card-thesis {
    grid-column: 1;
    grid-row: 1;

    opacity: 1;
    transition: opacity .8s ease-in-out, transform .4s ease-in-out;
}

.qa, .qa-sidebar {
    margin: .5rem;
}

.qa .card {
    position: relative;
    z-index: 100;
}

.qa-answers {
    margin-top: 0;
    margin-bottom: 2rem;

    display: flex;
    flex-direction: row;
    gap: 1rem;
    justify-content: center;

    padding: 0;
}

.qa-answers > .qa-answer-btn, .qa-sidebar .qa-thesis {
    padding: 1rem;

    background-color: transparent;
    border: none;
    border-bottom: 2px solid var(--accent);
    border-radius: 0;
}

.qa-answers > .qa-answer-btn.selected {
    background-color: var(--accent);
}

.qa-answers > .qa-answer-btn:hover, .qa-sidebar .qa-thesis:hover {
    background-color: var(--primary);
}

.thesis-overview {
    display: flex;
    flex-direction: column;
    margin-bottom: .5rem;
}

.thesis-overview > * {
    margin: 0;
}

.btn-box {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 1rem;

    width: 100%;
}

.space-between {
    justify-content: space-between;
}

